--- a/project-1.html
+++ b/project-1.html
@@ -165,12 +165,12 @@
                 target="_blank"
                 >Live Link</a
               >
-              <!-- <a
-                href="#"
+              <a
+                href="./index.html#projects"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              > -->
+                target="_self"
+                >Go Back</a
+              >
             </div>
           </div>
         </div>
